Added weekend endpoints
